# yap

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: example.md
example/: async.yap  error.yap  hello_world.yap  interfaces.yap  null.yap  objects.yap  variables.yap
example/modules/: custom-math.yap  main.yap
src/: yap.c
tooling/highlight/yap-lang/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
tooling/highlight/yap-lang/syntaxes/: yap.tmLanguage.json
